<resources>
    <string name="app_name">SmartCoffee</string>
    <string name="dialog_name">PlugPagService Demo</string>

    <!-- MENU -->
    <string name="other_features">Outras</string>
    <string name="menu_auth">Autenticação</string>
    <string name="menu_transactions">Transações</string>
    <string name="menu_nfc">NFC</string>
    <string name="menu_printer">Impressão</string>
    <string name="txt_demo_interno">Demo Interno</string>
    <string name="txt_todas_funcionalidades">Todas Funcionalidades</string>

    <!-- OTHER FEATURES -->
    <string name="btn_permissions">Solicitar/Verificar permissões</string>
    <string name="btn_swcapabilities">Verificar software capabilities</string>
    <string name="btn_product_initialization">Verificar inicialização de produtos</string>
    <string name="msg_all_permissions_granted">Todas permissões concedidas</string>
    <string name="msg_reboot_terminal">Deseja reiniciar o terminal?</string>

    <!-- AUTH -->
    <string name="txt_activation_code">Insira seu código</string>
    <string name="btn_authentication_check">Verificar autenticação</string>
    <string name="btn_authentication_request">Solicitar autenticação</string>
    <string name="btn_authentication_deactivate">Solicitar desativação</string>
    <string name="auth_activated_successfully">Ativado com sucesso</string>
    <string name="auth_deactivated_successfully">Desativado com sucesso</string>
    <string name="auth_isnt_authenticated">Terminal não ativo</string>
    <string name="auth_is_authenticated">Terminal ativo</string>

    <!-- TRANSACTIONS -->
    <string name="text_dialog_message">Aproxime, insira ou passe o cartão</string>
    <string name="text_credit">Crédito</string>
    <string name="text_credit_in_cash">Crédito à vista</string>
    <string name="text_credit_seller_installments">Crédito parcelado vendedor</string>
    <string name="text_credit_buyer_installments">Crédito parcelado comprador</string>
    <string name="text_credit_carne">Crédito Carnê</string>
    <string name="text_debit">Débito</string>
    <string name="text_debit_carne">Débito Carnê</string>
    <string name="text_qrcode">QRCODE</string>
    <string name="text_qrcode_cash_debit">QR Code à vista - Débito</string>
    <string name="text_qrcode_cash_credit">QR Code à vista - Crédito</string>
    <string name="text_qrcode_seller_installments">QR Code Parcelado Vendedor</string>
    <string name="text_qrcode_buyer_installments">QR Code Parcelado Comprador</string>
    <string name="btn_smartpos_refund_qr_code">Estornar QrCode</string>
    <string name="text_voucher">Voucher</string>
    <string name="text_pix">Pix</string>
    <string name="text_refund">Estorno</string>
    <string name="btn_smartpos_query">Consulta</string>
    <string name="btn_smartpos_print_customer">Via do Cliente</string>
    <string name="btn_smartpos_print_stablishment">Via do Establecimento</string>
    <string name="transactions_successful">Transação realizada com sucesso</string>
    <string name="transactions_successful_abort">Cancelado com sucesso</string>
    <string name="no_transaction_to_refund">Não há transação a ser estornada.</string>

    <!-- NFC -->
    <string name="txt_nfc">NFC</string>
    <string name="nfc_read_card">Ler cartão</string>
    <string name="nfc_write_card">Escrever no cartão</string>
    <string name="nfc_write_directly">Escrita NFC Bloco B</string>
    <string name="nfc_auth_card_directly">Autenticação NFC Direta</string>
    <string name="nfc_auth_bloco_b">Autenticação NFC Bloco B</string>
    <string name="write_nfc">Escrita NFC</string>
    <string name="read_nfc">Leitura NFC</string>
    <string name="apdu_read_card">Leitura APDU</string>
    <string name="nfc_detect_card_directly">Detectar Cartão</string>
    <string name="nfc_detect_remove_card_directly">Detectar Remoção Cartão</string>
    <string name="txt_abort_nfc">Cancelar Operação NFC</string>

    <!-- BEEP E LEDS -->
    <string name="txt_beep_leds">Beep e Leds</string>
    <string name="txt_beep_success">Beep realizado com sucesso</string>
    <string name="txt_beep_error">Não foi possível realizar o beep</string>
    <string name="txt_play_beep">Reproduzir Beep</string>
    <string name="nfc_led_blue">Ligar Led Azul</string>
    <string name="nfc_led_green">Ligar Led Verde</string>
    <string name="nfc_led_red">Ligar Led Vermelho</string>
    <string name="nfc_led_yellow">Ligar Led Amarelo</string>
    <string name="nfc_led_off">Desligar Led</string>

    <!-- PRINTER -->
    <string name="printer_print_file">Imprimir arquivo</string>
    <string name="printer_print_success">Impressão realizada com sucesso</string>
    <string name="printer_print_failure">Houve um erro na impressão</string>
    <string name="txt_print_test">Crie o arquivo teste.jpg na pasta download para imprimir</string>

    <!-- DEMO INTERNO -->
    <string name="button_pay">PAGAR</string>
    <string name="total_amount">R$ %1$.2f</string>
    <string name="refund">Estornar última transação</string>
    <string name="close">Fechar</string>
    <string name="ok">OK</string>
    <string name="btn_smartpos_last_transaction">Buscar última transação</string>
    <string name="btn_smartpos_get_card_data">Buscar dados do cartão</string>
    <string name="btn_smartpos_reboot">Reiniciar Terminal</string>
    <string name="btn_smartpos_start_onboarding">Abrir Boas Vindas</string>
    <string name="reprint_customer_receipt">Reimprimir via cliente</string>
    <string name="reprint_stablishment_receipt">Reimprimir via estabelecimento</string>
    <string name="main_demo">Demo Interno</string>
    <string name="main_all_functionalities">Todas Funcionalidades</string>
    <string name="main_demo_simplified">Demo Simplificado</string>
    <string name="text_error_select_installment">Erro na opção selecionada</string>
    <string name="text_invalid_operation">Operação inválida</string>
    <string name="text_not_selected_installment">Não foi selecionado nenhuma quantidade de parcelas</string>
    <string name="text_select_installment">Selecione a parcela</string>
    <string name="txt_installments_invalid_message">O valor total mínimo para parcelamento é de R$10,00</string>
    <string name="default_value">R$ 0,00</string>
    <string name="default_zero_value">0,00</string>
    <string name="text_senha">SENHA</string>
    <string name="text_incorreta">INCORRETA</string>
    <string name="txt_loading">Carregando...</string>

    <!-- PRÉ-AUTORIZAÇÃO -->
    <string name="btn_smartpos_effectuate_pre_auto">Efetivar pré autorização</string>
    <string name="btn_smartpos_pre_auto">Pré autorização</string>
    <string name="btn_pre_auto_dig_data">Consultar Pré Auto Digitada</string>
    <string name="btn_pre_auto_dig_create_in_cash">Criar Pré Auto Digitada à Vista</string>
    <string name="btn_pre_auto_dig_cancel">Cancelar Pré Auto Digitada</string>
    <string name="btn_pre_auto_dig_effectuate">Efetivar Pré Auto Digitada</string>
    <string name="credit_card">0000 0000 0000 0000</string>
    <string name="exp_date">MMAA</string>
    <string name="cvv">CVV</string>
    <string name="date">DDMMAAAA</string>
    <string name="cv">CV</string>
    <string name="text_a_vista">À VISTA</string>
    <string name="text_a_prazo">À PRAZO</string>
    <string name="txt_preauto_cv">CV</string>
    <string name="txt_preauto_amount">Amount</string>
    <string name="txt_preauto_card_brand">Card brand</string>
    <string name="txt_preauto_holder">Holder</string>
    <string name="txt_preauto_date">Date</string>
    <string name="txt_preauto_detail_title">Informações de Pré Autorização</string>
    <string name="text_value_pre_auto">Valor pré autorização</string>
    <string name="value_pre_auto_created">Confirmar valor desejado:</string>
    <string name="txt_preauto">Pré Autorização</string>
    <string name="txt_preauto_digitado">Pré Autorização Digitada</string>
    <string name="txt_pre_auto_create">Criar à vista</string>
    <string name="btn_pre_auto_create_installments">Criar à prazo</string>
    <string name="pre_auto_dig_create_installments">Criar Pré Auto digitado à prazo </string>
    <string name="btn_pre_auto_effectuate">Efetivar</string>
    <string name="btn_pre_auto_effectuate_keying">Efetivar Pré Auto digitada</string>
    <string name="btn_pre_auto_cancelar">Cancelar</string>
    <string name="pre_auto_dig_cancelar">Cancelar Pré Auto digitado</string>
    <string name="btn_pre_auto_report">Relatório</string>
    <string name="text_btn_consulta_preauto_dig">Consultar Pré Auto Digitado</string>
    <string name="text_btn_consulta_preauto">Consultar</string>
    <string name="txt_preauto_auto">Auto</string>
    <string name="txt_preauto_holder_name">Holder name</string>
    <string name="txt_preauto_nsu">NSU</string>
    <string name="txt_preauto_payment_type">Payment type</string>
    <string name="txt_preauto_transaction_type">Type transaction</string>
    <string name="txt_preauto_transaction_id">Transaction Id</string>
    <string name="txt_preauto_transaction_code">Transaction Code</string>
    <string name="txt_preauto_terminal_serial">Terminal serial</string>
    <string name="txt_installments">Installments</string>
    <string name="txt_transaction_auto_example">888888</string>
    <string name="txt_amount_example">RS. 151515</string>
    <string name="txt_card_brand_example">MASTER CARD</string>
    <string name="txt_holder_name_example">Petter Pan</string>
    <string name="txt_holder_example">1546</string>
    <string name="txt_date_example">12/01/2021</string>
    <string name="txt_nsu_example">25895555555</string>
    <string name="txt_payment_type_example">6</string>
    <string name="txt_type_transaction_example">Criação</string>
    <string name="txt_installments_example">1</string>
    <string name="txt_error_code_example">M1000</string>
    <string name="txt_error_code_message_example">Este cartão nao tem Pré Auto criada</string>
    <string name="preauto_cancel_successful">Pré autorização foi cancelado com sucesso</string>
    <string name="txt_fill_fields_values">Preencha os campos necessários</string>
    <string name="txt_fill_date_value">Digite a data no formato DDMMAAAA</string>
    <string name="txt_not_value">Sem valor</string>
    <string name="txt_error_code">Código de erro desconhecido</string>
    <string name="txt_msg_default_error">Ocorreu um erro inesperado..</string>
    <string name="txt_yes">Sim</string>
    <string name="txt_no">Não</string>
    <string name="txt_confirm">Confirmar</string>
    <string name="txt_cancel">Cancel</string>

</resources>
