<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_auth"
        android:icon="@drawable/ic_autentication"
        android:title="@string/menu_auth" />

    <item
        android:id="@+id/menu_transactions"
        android:icon="@drawable/ic_payment"
        android:title="@string/menu_transactions" />

    <item
        android:id="@+id/menu_nfc"
        android:icon="@drawable/ic_nfc"
        android:title="@string/menu_nfc" />

    <item
        android:id="@+id/menu_printer"
        android:icon="@drawable/ic_printer"
        android:title="@string/menu_printer" />

    <item
        android:id="@+id/other_features"
        android:icon="@drawable/ic_other_features"
        android:title="@string/other_features" />

</menu>