<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_16">

        <Button
            android:id="@+id/btn_smartpos_preauto"
            style="@style/ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/txt_preauto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_smartpos_credit"
            style="@style/ButtonStyle"
            android:text="@string/text_credit_in_cash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_preauto" />

        <Button
            android:id="@+id/btn_smartpos_credit_carne"
            style="@style/ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/text_credit_carne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_credit" />

        <Button
            android:id="@+id/btn_smartpos_credit_with_seller_installments"
            style="@style/ButtonStyle"
            android:text="@string/text_credit_seller_installments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_credit_carne" />

        <Button
            android:id="@+id/btn_smartpos_credit_with_buyer_installments"
            style="@style/ButtonStyle"
            android:text="@string/text_credit_buyer_installments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_credit_with_seller_installments" />

        <Button
            android:id="@+id/btn_smartpos_debit"
            style="@style/ButtonStyle"
            android:text="@string/text_debit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_credit_with_buyer_installments" />

        <Button
            android:id="@+id/btn_smartpos_debit_carne"
            style="@style/ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/text_debit_carne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_debit" />

        <Button
            android:id="@+id/btn_smartpos_voucher"
            style="@style/ButtonStyle"
            android:text="@string/text_voucher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_debit_carne" />

        <Button
            android:id="@+id/btn_smartpos_void_payment"
            style="@style/ButtonStyle"
            android:text="@string/text_refund"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_voucher" />

        <Button
            android:id="@+id/btn_smartpos_void_print_stablishment"
            style="@style/ButtonStyle"
            android:text="@string/btn_smartpos_print_stablishment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_void_payment" />

        <Button
            android:id="@+id/btn_smartpos_void_print_customer"
            style="@style/ButtonStyle"
            android:text="@string/btn_smartpos_print_customer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_void_print_stablishment" />

        <Button
            android:id="@+id/btn_smartpos_get_last_transaction"
            style="@style/ButtonStyle"
            android:text="@string/btn_smartpos_last_transaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_void_print_customer" />

        <Button
            android:id="@+id/btn_smartpos_get_card_data"
            style="@style/ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/btn_smartpos_get_card_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_get_last_transaction" />

        <Button
            android:id="@+id/btn_smartpos_reboot"
            style="@style/ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/btn_smartpos_reboot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_get_card_data" />

        <Button
            android:id="@+id/btn_smartpos_start_onboarding"
            style="@style/ButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/btn_smartpos_start_onboarding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_smartpos_reboot" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>