<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_pre_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_16">

        <Button
            android:id="@+id/btn_create"
            style="@style/ButtonStyle"
            android:text="@string/txt_pre_auto_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_create_installments"
            style="@style/ButtonStyle"
            android:text="@string/btn_pre_auto_create_installments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_create" />

        <Button
            android:id="@+id/btn_effectuate_cash"
            style="@style/ButtonStyle"
            android:text="@string/btn_pre_auto_effectuate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_create_installments" />

        <Button
            android:id="@+id/btn_cancel_preauto"
            style="@style/ButtonStyle"
            android:text="@string/btn_pre_auto_cancelar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_effectuate_cash" />

        <Button
            android:id="@+id/btn_consulta_pre_auto"
            style="@style/ButtonStyle"
            android:text="@string/text_btn_consulta_preauto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_cancel_preauto" />

        <Button
            android:id="@+id/btn_create_keying"
            style="@style/ButtonStyle"
            android:text="@string/btn_pre_auto_dig_create_in_cash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_consulta_pre_auto" />

        <Button
            android:id="@+id/btn_create_installments_keying"
            style="@style/ButtonStyle"
            android:text="@string/pre_auto_dig_create_installments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_create_keying" />

        <Button
            android:id="@+id/btn_consulta_pre_auto_dig"
            style="@style/ButtonStyle"
            android:text="@string/text_btn_consulta_preauto_dig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_create_installments_keying" />

        <Button
            android:id="@+id/btn_cancel_preauto_keying"
            style="@style/ButtonStyle"
            android:text="@string/btn_pre_auto_dig_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_consulta_pre_auto_dig" />

        <Button
            android:id="@+id/btn_effectuate_cash_keying"
            style="@style/ButtonStyle"
            android:text="@string/btn_pre_auto_effectuate_keying"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_cancel_preauto_keying" />

        <Button
            android:id="@+id/btn_report"
            style="@style/ButtonStyle"
            android:text="@string/btn_pre_auto_report"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_effectuate_cash_keying" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>