<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnQRCodeInCashDebit"
            android:text="@string/text_qrcode_cash_debit"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btnQRCodeInCashCredit"
            android:text="@string/text_qrcode_cash_credit"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/btnQRCodeInCashDebit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btnQRCodeBuyerInstallments"
            android:text="@string/text_qrcode_buyer_installments"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/btnQRCodeInCashCredit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btnQRCodeSellerInstallments"
            android:text="@string/text_qrcode_seller_installments"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/btnQRCodeBuyerInstallments"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btn_refund_qr_code"
            android:text="@string/btn_smartpos_refund_qr_code"
            style="@style/ButtonStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnQRCodeSellerInstallments" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>